# reading-scraper

./: Cargo.toml
src/: main.rs  text_fetchers.rs
src/text_fetchers/: text_processor.rs
src/text_fetchers/text_processor/: difficulty.rs
