[package]
name = "reading-scraper"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
    async-std = "1.8"
    crabler = "0.1"
    futures = "0.3"
    rayon = "1.5"

[patch.crates-io]
    crabler = { git = "https://github.com/MelonShooter/crabler-fork" }
    # crabler = { path = "../crabler-fork" }
    crabquery = { git = "https://github.com/MelonShooter/crabquery-fork" }

[profile.dev.package."*"]
opt-level = 3
