[package]
name = "reading-scraper"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
    tokio = {version = "1", features = ["rt"]}
    regex = "1"
    lazy_static = "1"
    scraper = "0.13"
    simple_logger = "3"
    log = "0.4"

[profile.dev.package."*"]
opt-level = 3
